--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+
 .content{ /*make the background color*/
     background-color: #f0f0f0;
     width: 90%;
@@ -12,13 +14,19 @@ body {
 }
 
 .container1 { /*This is for the banner*/
-    background-image: url('/images/banner.jpg');
+    background-image: url('/resources/images/banner.jpg');
     background-size: cover;
     background-position: center;
     text-align: center; /* Center the content horizontally */
     color: #fff; /* Text color on the background image */
     padding: 80px 0; /*Shows more of the image*/
 }
+
+
+
+
+
+
 
 /* Horizontal navigation bar styles */
 nav ul {
@@ -40,34 +48,140 @@ nav{
 
 nav a {
     text-decoration: none;
-    color: #fff; /* Text color for the navigation links */
+    color: #fff2cc; /* Text color for the navigation links */
     display: block;
     padding: 15px 20px;
     transition: background-color 0.3s; /* Smooth color transition on hover */
 }
 
 nav a:hover {
-    background-color: #00aaff; /* Background color on hover */
+    background-color: 	 #33ff33; /* Background color on hover */
 }
+
+
+
+
+
+
 
 section:nth-child(odd){
     background-color: #ffffff;
 }
 
-section *{
-    margin: 0;
-}
-
-.content_title{
+.content_title{/*give the titles their fond*/
     font-weight: 600;
 }
 
-.news-container {
+#img_earth{
+    max-height: 200px;
+    width: auto;
+    margin-left: 50px;
+}
+
+.round_image{/*make image round*/
+    border-radius: 50%;
+    max-height: 200px;
+    width: auto;
+    margin-left: 50px;
+}
+
+.content_sections{/* Arrange paragraph and image in a row  */
+    display: flex;
+    flex-direction: row; 
+
+}
+section{
+    margin-top: 30px;
+    margin-bottom: 30px;
+    padding: 30px;
+}
+
+#section1 p{ /*adjust margins in section1*/
+   margin-top: 30px;
+}
+
+h2{/*remove margin for section1 header for display*/
+    margin-bottom: 0;
+}
+
+
+
+
+.news-container {/*section3*/
     display: flex;
 }
 
-.news-item {
-    margin: 10px; /* Add some margin for spacing */
+.news_item {
+    margin: 10px 20px 10px 20px
+}
+
+.section4{
+    width: 100%
+}
+
+.contact_content { /*Have a right and left section*/
+    display: inline-block;
+    width: 40%;
+    vertical-align: top; /* Align the divs at the top */
+}
+
+.greentext{
+    color: #00b33c;
+    font-size: 120%;
+    font-weight: 700;
+}
+
+#contact_content_left{
+    text-align: right;
+    margin-right: 30px;
+}
+
+.contact-info { /*paragraph naast tekst schikken*/
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+.section4{
+    display: flex;
+}
+
+.contact-info i {
+    margin: 10px;
+    color: #333; /* Icon color */
+}
+
+.divider{
+    width: 10px;
+    color: #333;
+}
+
+.contact-input {
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
 }
 
 
+.icon {
+    background-color: #00b33c; /* Green background color for icons */
+    padding: 9px;
+
+}
+
+.input-field {
+    flex: 1;
+    padding: 10px;
+    border: 1px solid #ccc;
+}
+
+textarea{
+    width: 100%;
+}
+
+.btn{
+    width: 100%;
+    height: 50px;
+    color:#f0f0f0;
+    background-color: #00b33c;
+    border: none;
+}
