--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 .container1 { /*This is for the banner*/
-    background-image: url('/images/banner.jpg');
+    background-image: url('./images/banner.jpg');
     background-size: cover;
     background-position: center;
     text-align: center; /* Center the content horizontally */
